--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,13 @@
 	"type": "project",
 	"license": "private use",
 	"minimum-stability": "stable",
-	"version": "0.1.0",
+	"version": "0.1.1",
 	"require": {
+		"kartik-v/bootstrap-checkbox-x": "^1.5",
+		"kartik-v/bootstrap-fileinput": "^4.3",
+		"kartik-v/bootstrap-star-rating": "^4.0",
+		"kartik-v/bootstrap-tabs-x": "^1.3",
+		"kartik-v/dependent-dropdown": "^1.4",
 		"kartik-v/yii2-builder": "^1.6",
 		"kartik-v/yii2-checkbox-x": "^1.0",
 		"kartik-v/yii2-context-menu": "^1.2",
@@ -22,9 +27,10 @@
 		"kartik-v/yii2-grid": "^3.1",
 		"kartik-v/yii2-helpers": "^1.3",
 		"kartik-v/yii2-icons": "^1.4",
-		"kartik-v/yii2-ipinfo": "dev-master",
+		"kartik-v/yii2-krajee-base": "^1.8",
 		"kartik-v/yii2-label-inplace": "^1.2",
 		"kartik-v/yii2-money": "^1.2",
+		"kartik-v/yii2-mpdf": "^1.0",
 		"kartik-v/yii2-nav-x": "^1.2",
 		"kartik-v/yii2-password": "^1.5",
 		"kartik-v/yii2-slider": "^1.3",
@@ -33,6 +39,24 @@
 		"kartik-v/yii2-sortable": "^1.2",
 		"kartik-v/yii2-tabs-x": "^1.2",
 		"kartik-v/yii2-tree-manager": "^1.0",
+		"kartik-v/yii2-widget-activeform": "^1.4",
+		"kartik-v/yii2-widget-affix": "^1.0",
+		"kartik-v/yii2-widget-alert": "^1.1",
+		"kartik-v/yii2-widget-colorinput": "^1.0",
+		"kartik-v/yii2-widget-datepicker": "^1.4",
+		"kartik-v/yii2-widget-datetimepicker": "^1.4",
+		"kartik-v/yii2-widget-depdrop": "^1.0",
+		"kartik-v/yii2-widget-fileinput": "^1.0",
+		"kartik-v/yii2-widget-growl": "^1.1",
+		"kartik-v/yii2-widget-rangeinput": "^1.0",
+		"kartik-v/yii2-widget-rating": "^1.0",
+		"kartik-v/yii2-widget-select2": "^2.0",
+		"kartik-v/yii2-widget-sidenav": "^1.0",
+		"kartik-v/yii2-widget-spinner": "^1.0",
+		"kartik-v/yii2-widget-switchinput": "^1.3",
+		"kartik-v/yii2-widget-timepicker": "^1.0",
+		"kartik-v/yii2-widget-touchspin": "^1.2",
+		"kartik-v/yii2-widget-typeahead": "^1.0",
 		"kartik-v/yii2-widgets": "^3.4"
 	},
 	"require-dev": {
