--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,10 @@
 {
-	"name": "p2made/yii2-p2y2-kartik-collection",
-	"description": "Yii2 Yii Gii",
+	"name": "p2made/p2y2-kartik-collection",
+	"description": "A convenience package for adding a bunch of kartik-v packages.",
 	"keywords": ["yii2", "Yii", "Gii"],
 	"type": "project",
 	"license": "mit",
 	"minimum-stability": "stable",
-	"version": "1.0.0",
 	"require": {
 		"kartik-v/bootstrap-checkbox-x": "^1.5",
 		"kartik-v/bootstrap-fileinput": "^5.2",
